--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
+    "sass": "^1.93.3",
+    "sass-loader": "^16.0.6",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
