--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           MESSAGE: "Build: ({sha}) {msg}" # The commit message
   notify:
     runs-on: ubuntu-latest
-    needs: build-and-deploy
+    needs: build
     if: always()
     steps:
       - name: Notify Slack
