--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Notify Slack
         run: |
-          if [ "${{ needs.build-and-deploy.result }}" = "success" ]; then
+          if [ "${{ needs.build.result }}" = "success" ]; then
             STATUS="✅ 部署完成"
           else
             STATUS="❌ 部署失敗"
